check asp.net runtime

--- a/MvcFox/MvcFox/MvcFox.csproj
+++ b/MvcFox/MvcFox/MvcFox.csproj
@@ -153,6 +153,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="CheckRuntime.aspx" />
     <Content Include="Controllers\JsonErrorResult.cs" />
     <Compile Include="App_Start\BundleConfig.cs" />
     <Compile Include="App_Start\FilterConfig.cs" />
