--- a/MvcFox/MvcFox/packages.config
+++ b/MvcFox/MvcFox/packages.config
@@ -5,7 +5,7 @@
   <package id="EntityFramework" version="6.1.0" targetFramework="net451" />
   <package id="EntityFramework.zh-Hans" version="6.1.0" targetFramework="net451" />
   <package id="jQuery" version="1.10.2" targetFramework="net451" />
-  <package id="jQuery.Validation" version="1.11.1" targetFramework="net451" />
+  <package id="jQuery.Validation" version="1.14.0" targetFramework="net451" />
   <package id="Microsoft.AspNet.Identity.Core" version="2.0.0" targetFramework="net451" />
   <package id="Microsoft.AspNet.Identity.Core.zh-Hans" version="2.0.0" targetFramework="net451" />
   <package id="Microsoft.AspNet.Identity.EntityFramework" version="2.0.0" targetFramework="net451" />
@@ -20,7 +20,7 @@
   <package id="Microsoft.AspNet.Web.Optimization.zh-Hans" version="1.1.3" targetFramework="net451" />
   <package id="Microsoft.AspNet.WebPages" version="3.2.0-rc" targetFramework="net451" />
   <package id="Microsoft.AspNet.WebPages.zh-Hans" version="3.2.0-rc" targetFramework="net451" />
-  <package id="Microsoft.jQuery.Unobtrusive.Validation" version="3.2.0-rc" targetFramework="net451" />
+  <package id="Microsoft.jQuery.Unobtrusive.Validation" version="3.2.3" targetFramework="net451" />
   <package id="Microsoft.Owin" version="2.1.0" targetFramework="net451" />
   <package id="Microsoft.Owin.Host.SystemWeb" version="2.1.0" targetFramework="net451" />
   <package id="Microsoft.Owin.Host.SystemWeb.zh-Hans" version="2.1.0" targetFramework="net451" />
