--- a/MvcFox/MvcFox/Web.config
+++ b/MvcFox/MvcFox/Web.config
@@ -22,6 +22,10 @@
     <authentication mode="None" />
     <compilation debug="true" targetFramework="4.5.1" />
     <httpRuntime targetFramework="4.5.1" />
+    <customErrors mode="On" defaultRedirect="/Error">
+      <error redirect="/Error/NotFound" statusCode="404"/>
+      <error redirect="/Error/InternalServerError" statusCode="500"/>
+    </customErrors>
   </system.web>
   <system.webServer>
     <modules>
