--- a/MvcFox/MvcFox/Web.config
+++ b/MvcFox/MvcFox/Web.config
@@ -24,7 +24,7 @@
     <httpRuntime targetFramework="4.5.1" />
     <customErrors mode="On" defaultRedirect="/Error">
       <error redirect="/Error/NotFound" statusCode="404"/>
-      <error redirect="/Error/InternalServerError" statusCode="500"/>
+      <error redirect="/Error/ServerError" statusCode="500"/>
     </customErrors>
   </system.web>
   <system.webServer>
