--- a/MvcFox/MvcFox/MvcFox.csproj
+++ b/MvcFox/MvcFox/MvcFox.csproj
@@ -292,6 +292,7 @@
     <Content Include="Views\Error\NotFound.cshtml" />
     <Content Include="Views\Error\ServerError.cshtml" />
     <Content Include="Views\TestError\Index.cshtml" />
+    <Content Include="Views\TestForm\TestErrorMsg.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Code\" />
