--- a/MVCValidateDemo/MVCValidateDemo/MVCValidateDemo.csproj
+++ b/MVCValidateDemo/MVCValidateDemo/MVCValidateDemo.csproj
@@ -272,6 +272,7 @@
     <Content Include="Views\Student\Index.cshtml" />
     <Content Include="Views\Student\Create.cshtml" />
     <Content Include="Views\Student\Create2.cshtml" />
+    <Content Include="Views\Student\Create3.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
