--- a/MVCValidateDemo/Aspnet.Mvc.Extension/Aspnet.Mvc.Extension.csproj
+++ b/MVCValidateDemo/Aspnet.Mvc.Extension/Aspnet.Mvc.Extension.csproj
@@ -75,14 +75,19 @@
     <Compile Include="AttributeExtensions\Number\DigitsAttribute.cs" />
     <Compile Include="AttributeExtensions\IDCardAttribute.cs" />
     <Compile Include="AttributeExtensions\MobileAttribute.cs" />
+    <Compile Include="AttributeExtensions\Number\IntegerAttribute.cs" />
     <Compile Include="AttributeExtensions\Number\NegDecimalAttribute.cs" />
     <Compile Include="AttributeExtensions\Number\NegIntegerAttribute.cs" />
     <Compile Include="AttributeExtensions\Number\NegNumericAttribute.cs" />
     <Compile Include="AttributeExtensions\NoCacheAttribute.cs" />
     <Compile Include="AttributeExtensions\Number\NonNegIntegerAttribute.cs" />
     <Compile Include="AttributeExtensions\Number\NonNegNumericAttribute.cs" />
+    <Compile Include="AttributeExtensions\Number\NonPosIntegerAttribute.cs" />
+    <Compile Include="AttributeExtensions\Number\NonPosNumericAttribute.cs" />
     <Compile Include="AttributeExtensions\Number\NumericAttribute.cs" />
+    <Compile Include="AttributeExtensions\Number\PosDecimalAttribute.cs" />
     <Compile Include="AttributeExtensions\Number\PosIntegerAttribute.cs" />
+    <Compile Include="AttributeExtensions\Number\PosNumericAttribute.cs" />
     <Compile Include="AttributeExtensions\ZipCodeAttribute.cs" />
     <Compile Include="ControllerExtensions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
