--- a/MVCValidateDemo/Aspnet.Mvc.Extension/Aspnet.Mvc.Extension.csproj
+++ b/MVCValidateDemo/Aspnet.Mvc.Extension/Aspnet.Mvc.Extension.csproj
@@ -89,6 +89,7 @@
     <Compile Include="AttributeExtensions\Number\PosIntegerAttribute.cs" />
     <Compile Include="AttributeExtensions\Number\PosNumericAttribute.cs" />
     <Compile Include="AttributeExtensions\ZipCodeAttribute.cs" />
+    <Compile Include="ChinaIDCard.cs" />
     <Compile Include="ControllerExtensions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ValidateHelper.cs" />
