--- a/MVCValidateDemo/MVCValidateDemo/MVCValidateDemo.csproj
+++ b/MVCValidateDemo/MVCValidateDemo/MVCValidateDemo.csproj
@@ -236,6 +236,7 @@
     <Content Include="Scripts\modernizr-2.6.2.js" />
     <Content Include="Scripts\respond.js" />
     <Content Include="Scripts\respond.min.js" />
+    <Content Include="Scripts\snippets\idcard.js" />
     <Content Include="Scripts\_references.js" />
     <Content Include="Web.config" />
     <Content Include="Web.Debug.config">
@@ -278,6 +279,7 @@
     <Content Include="Views\Student\Create4.cshtml" />
     <Content Include="Views\Student\Create5.cshtml" />
     <Content Include="Views\JqueryValidateDemo\Index.cshtml" />
+    <Content Include="Views\JqueryValidateDemo\InputLimit.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
