--- a/MVCValidateDemo/MVCValidateDemo/MVCValidateDemo.csproj
+++ b/MVCValidateDemo/MVCValidateDemo/MVCValidateDemo.csproj
@@ -291,6 +291,7 @@
     <Content Include="assets\fonts\glyphicons-halflings-regular.ttf" />
     <Content Include="assets\fonts\glyphicons-halflings-regular.eot" />
     <Content Include="packages.config" />
+    <Content Include="assets\js\jquery.pager.js" />
     <None Include="Project_Readme.html" />
     <Content Include="assets\jquery\jquery-1.10.2.min.map" />
   </ItemGroup>
