--- a/MVCValidateDemo/Aspnet.Mvc.Extension/Aspnet.Mvc.Extension.csproj
+++ b/MVCValidateDemo/Aspnet.Mvc.Extension/Aspnet.Mvc.Extension.csproj
@@ -70,6 +70,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AttributeExtensions\CompressAttribute.cs" />
     <Compile Include="AttributeExtensions\DateAttribute.cs" />
     <Compile Include="AttributeExtensions\Number\DecimalAttribute.cs" />
     <Compile Include="AttributeExtensions\Number\DigitsAttribute.cs" />
@@ -92,6 +93,7 @@
     <Compile Include="ChinaIDCard.cs" />
     <Compile Include="ControllerExtensions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ValidateCodeBuilder.cs" />
     <Compile Include="ValidateHelper.cs" />
   </ItemGroup>
   <ItemGroup>
