--- a/MVCValidateDemo/Aspnet.Mvc.Extension/Aspnet.Mvc.Extension.csproj
+++ b/MVCValidateDemo/Aspnet.Mvc.Extension/Aspnet.Mvc.Extension.csproj
@@ -36,7 +36,9 @@
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
+    <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Drawing" />
     <Reference Include="System.Web" />
     <Reference Include="System.Web.Helpers, Version=3.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <HintPath>..\packages\Microsoft.AspNet.WebPages.3.2.3\lib\net45\System.Web.Helpers.dll</HintPath>
@@ -92,7 +94,19 @@
     <Compile Include="AttributeExtensions\ZipCodeAttribute.cs" />
     <Compile Include="ChinaIDCard.cs" />
     <Compile Include="ControllerExtensions.cs" />
+    <Compile Include="FileUpload\CustomModelBinderProvider.cs" />
+    <Compile Include="FileUpload\FileUploadComponentModel.cs" />
+    <Compile Include="FileUpload\FileUploadComponentModelBinder.cs" />
+    <Compile Include="FileUpload\FileUploadConfigLoader.cs" />
+    <Compile Include="FileUpload\FileUploadController.cs" />
+    <Compile Include="FileUpload\FileUploadDisplayModel.cs" />
+    <Compile Include="FileUpload\FileUploadHelper.cs" />
+    <Compile Include="FileUpload\FileUploadValidateAttribute.cs" />
+    <Compile Include="LogHelper.cs" />
+    <Compile Include="FileUpload\WorkflowFileInfo.cs" />
+    <Compile Include="PreApplicationStartCode.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SystemConfig.cs" />
     <Compile Include="ValidateCodeBuilder.cs" />
     <Compile Include="ValidateHelper.cs" />
   </ItemGroup>
