--- a/MVCValidateDemo/MVCValidateDemo/Web.config
+++ b/MVCValidateDemo/MVCValidateDemo/Web.config
@@ -10,6 +10,8 @@
   </configSections>
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-MVCValidateDemo-20160601073052.mdf;Initial Catalog=aspnet-MVCValidateDemo-20160601073052;Integrated Security=True" providerName="System.Data.SqlClient" />
+    <add name="ENTERPRISES_SUPERWORKFLOWContext" connectionString="Data Source=.\SQL2008R2;Initial Catalog=ENTERPRISES_SUPERWORKFLOW;User ID=sa;Password=pass@word1;MultipleActiveResultSets=True;CONNECT TIMEOUT=60; MAX POOL SIZE =300; MIN POOL SIZE =0;Persist Security Info=false;Integrated Security=false" providerName="System.Data.SqlClient" />
+    <add name="ENTERPRISES_EFormContext" connectionString="Data Source=.\SQL2008R2;Initial Catalog=ENTERPRISES_SUPERWORKFLOW;User ID=sa;Password=pass@word1;MultipleActiveResultSets=True;CONNECT TIMEOUT=60; MAX POOL SIZE =300; MIN POOL SIZE =0;Persist Security Info=false;Integrated Security=false" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
@@ -17,6 +19,7 @@
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
     <add key="vs:EnableBrowserLink" value="false" />
+    <add key="System:FileStoreRootPath" value="D:\yibiyi\FileRoot"/>
   </appSettings>
   <system.web>
     <authentication mode="None" />
