--- a/MVCValidateDemo/Aspnet.Mvc.Extension/Aspnet.Mvc.Extension.csproj
+++ b/MVCValidateDemo/Aspnet.Mvc.Extension/Aspnet.Mvc.Extension.csproj
@@ -94,16 +94,14 @@
     <Compile Include="AttributeExtensions\ZipCodeAttribute.cs" />
     <Compile Include="ChinaIDCard.cs" />
     <Compile Include="ControllerExtensions.cs" />
-    <Compile Include="FileUpload\CustomModelBinderProvider.cs" />
-    <Compile Include="FileUpload\FileUploadComponentModel.cs" />
-    <Compile Include="FileUpload\FileUploadComponentModelBinder.cs" />
+    <Compile Include="FileUpload\FileUploadModelBinderProvider.cs" />
+    <Compile Include="FileUpload\FileUploadModel.cs" />
+    <Compile Include="FileUpload\FileUploadModelBinder.cs" />
     <Compile Include="FileUpload\FileUploadConfigLoader.cs" />
     <Compile Include="FileUpload\FileUploadController.cs" />
-    <Compile Include="FileUpload\FileUploadDisplayModel.cs" />
-    <Compile Include="FileUpload\FileUploadHelper.cs" />
+    <Compile Include="FileUpload\FileUploadHtmlHelper.cs" />
     <Compile Include="FileUpload\FileUploadValidateAttribute.cs" />
     <Compile Include="LogHelper.cs" />
-    <Compile Include="FileUpload\WorkflowFileInfo.cs" />
     <Compile Include="PreApplicationStartCode.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SystemConfig.cs" />
