--- a/MVCValidateDemo/MVCValidateDemo/Web.config
+++ b/MVCValidateDemo/MVCValidateDemo/Web.config
@@ -18,7 +18,8 @@
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
     <add key="vs:EnableBrowserLink" value="false" />
-    <add key="System:FileStoreRootPath" value="D:\yibiyi\FileRoot"/>
+    <add key="System:FileStoreRootPath" value="D:\yibiyi\VIPRoot" />
+    <add key="System:DomainUrl" value="http://www.forfutures.com:33366/" />
   </appSettings>
   <system.web>
     <authentication mode="None" />
