--- a/MVCValidateDemo/Aspnet.Mvc.Extension/Aspnet.Mvc.Extension.csproj
+++ b/MVCValidateDemo/Aspnet.Mvc.Extension/Aspnet.Mvc.Extension.csproj
@@ -101,7 +101,11 @@
     <Compile Include="FileUpload\FileUploadController.cs" />
     <Compile Include="FileUpload\FileUploadHtmlHelper.cs" />
     <Compile Include="FileUpload\FileUploadValidateAttribute.cs" />
+    <Compile Include="ImageHelper.cs" />
     <Compile Include="LogHelper.cs" />
+    <Compile Include="PicUpload\PicUploadController.cs" />
+    <Compile Include="PicUpload\PicUploadHtmlHelper.cs" />
+    <Compile Include="PicUpload\PicUploadModel.cs" />
     <Compile Include="PreApplicationStartCode.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SystemConfig.cs" />
@@ -114,6 +118,7 @@
   <ItemGroup>
     <Content Include="FileUpload\readme.txt" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
