--- a/MVCValidateDemo/MVCValidateDemo/Views/Web.config
+++ b/MVCValidateDemo/MVCValidateDemo/Views/Web.config
@@ -17,6 +17,7 @@
         <add namespace="System.Web.Mvc.Html" />
         <add namespace="System.Web.Optimization"/>
         <add namespace="System.Web.Routing" />
+        <add namespace="Aspnet.Mvc.Extension"/>
         <add namespace="MVCValidateDemo" />
       </namespaces>
     </pages>
